--- a/chat/package.json
+++ b/chat/package.json
@@ -12,13 +12,28 @@
     "react-scripts": "4.0.3",
     "socket.io-client": "^4.1.2",
     "styled-components": "^5.3.3",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "workbox-background-sync": "^5.1.4",
+    "workbox-broadcast-update": "^5.1.4",
+    "workbox-cacheable-response": "^5.1.4",
+    "workbox-core": "^5.1.4",
+    "workbox-expiration": "^5.1.4",
+    "workbox-google-analytics": "^5.1.4",
+    "workbox-navigation-preload": "^5.1.4",
+    "workbox-precaching": "^5.1.4",
+    "workbox-range-requests": "^5.1.4",
+    "workbox-routing": "^5.1.4",
+    "workbox-strategies": "^5.1.4",
+    "workbox-streams": "^5.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build && npm run clean-map && cd build && surge -d https://socketchat.surge.sh && npm run play-finish-sound",
+    "clean-map": "rimraf build/**/*.map",
+    "play-finish-sound": "afplay /System/Library/Sounds/Glass.aiff"
   },
   "eslintConfig": {
     "extends": [
